# CHATBOT_CLASES_IA

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TUI_README.md  init_db.py
macro/: .gitignore
macro/app/: pyproject.toml  server_mcp.py
macro/resources/: datasets.py  fred_endpoints.json
mcp-client/: .env.example  INSTALL_TUI.bat  INSTALL_TUI.sh  README.md  TUI_GUIDE.md  client.py  commands.py  gui_backend.py  pyproject.toml  run_tui.py  tui_app.py
mcp-client/application/: README.md
mcp-client/application/use_cases/: __init__.py  connect_mcp.py  execute_tool.py  process_query.py
mcp-client/core/: README.md
mcp-client/core/interfaces/: README.md  __init__.py  application_service.py  conversation_repository.py  history_manager.py  llm_provider.py  mcp_client.py
mcp-client/core/models/: conversation.py  llm_response.py  tool_result.py
mcp-client/core/services/: __init__.py  conversation_service.py  llm_service.py  mcp_service.py
mcp-client/infrastructure/: README.md
mcp-client/infrastructure/llm/: __init__.py  base_provider.py  claude_provider.py  gemini_provider.py  openai_provider.py  provider_factory.py
mcp-client/presentation/: README.md  __init__.py
mcp-client/presentation/tui/: __init__.py  tui_app_adapter.py
mcp-client/presentation/tui/formatters/: __init__.py  message_formatter.py  tool_formatter.py
mcp-client/presentation/tui/panels/: __init__.py  chat_panel.py  dataset_panel.py  status_bar.py
mcp-client/ui/: __init__.py  console_ui.py
mcp-client/utils/: __init__.py  cache.py  history.py  input_handler.py
(+14 files in other folders)
