[project]
name = "macro-chatbot"
version = "0.1.0"
description = "MCP server for macroeconomic analysis"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.17.0",
    "fastmcp>=0.6.0",
    "fredapi>=0.5.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.1.1",
    "matplotlib>=3.7.0",
    "statsmodels>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]


